--- a/samples/nodejs/device.sample.cfg
+++ b/samples/nodejs/device.sample.cfg
@@ -1,4 +1,5 @@
-org=xyzzy
-type=acmedoobry
-id=0191aabbcc34
-token=ojfiweiweiewjf
+org=my_organization
+type=my_type
+id=112233445566
+auth-method=token
+auth-token=my_token
